# ChangeLog for app-editors/gvim
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.387 2013/05/08 08:49:11 radhermit Exp $

*gvim-7.3.931 (08 May 2013)

  08 May 2013; Tim Harder <radhermit@gentoo.org> +gvim-7.3.931.ebuild:
  Version bump.

*gvim-7.3.905 (21 Apr 2013)

  21 Apr 2013; Tim Harder <radhermit@gentoo.org> +files/gvim-python3.patch,
  +gvim-7.3.905.ebuild:
  Version bump, update to EAPI 5 and support python3.

*gvim-7.3.762 (27 Dec 2012)

  27 Dec 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.762.ebuild:
  Version bump - 7.3.762

*gvim-7.3.646 (30 Aug 2012)

  30 Aug 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.646.ebuild:
  Version bump: 7.3.646 is released

*gvim-7.3.600 (12 Jul 2012)

  12 Jul 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.600.ebuild:
  Version bump: 7.3.600 is released

*gvim-7.3.566 (27 Jun 2012)

  27 Jun 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.566.ebuild:
  Version bump: 7.3.566 is released

*gvim-7.3.556 (19 Jun 2012)

  19 Jun 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.556.ebuild:
  Version bump: 7.3.556 is released

*gvim-7.3.537 (01 Jun 2012)

  01 Jun 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.537.ebuild:
  Version bump: 7.3.537 is released

*gvim-7.3.515 (02 May 2012)

  02 May 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.515.ebuild:
  Version bump: 7.3.515 is released

*gvim-7.3.502 (23 Apr 2012)

  23 Apr 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.502.ebuild:
  Version bump: 7.3.502 is released

*gvim-7.3.498 (20 Apr 2012)

  20 Apr 2012; Jim Ramsay <jim_ramsay@gentoo.org> +gvim-7.3.498.ebuild:
  Version bump: 7.3.498 is released

  29 Mar 2012; Jim Ramsay <jim_ramsay@gentoo.org> -gvim-7.2.442.ebuild,
  -gvim-7.3.135.ebuild, -gvim-7.3.189.ebuild, -gvim-7.3.219.ebuild,
  -gvim-7.3.244.ebuild, -gvim-7.3.322.ebuild, -gvim-7.3.353.ebuild,
  -gvim-7.3.372.ebuild, -gvim-7.3.393.ebuild: