@@ -32,23 +32,23 @@ EBUILD libreoffice-3.6.6.2.ebuild 17497 SHA256 eca757b5bccb639b811b9afb85cacb96e
 EBUILD libreoffice-3.6.9999.ebuild 17502 SHA256 3d2197e574b2536738928410075742e1b81b2b46cb358ff2b07c25c2b19038d3 SHA512 3b42606bb4e0cc8b130732a768e77317c8c11eadc1f937d5ced0fc25ca4eaa4031b61dd116084c9d99ec7fc7491c60907552305fac4bcf212a83dfdf9aaaddeb WHIRLPOOL 9d4d2706a4ad3f586a262f6feccc121bcd6db304b424821801cbdc0d1ffd3f4585d34b3c5fab7972137be4bfe80cad05b0ca1b2b1ec49e6ae28d5fa41df4efc1
 EBUILD libreoffice-4.0.3.3.ebuild 17442 SHA256 644ed5b49ee2946b830af2c66c991f80d274ae0beb18d471ad16ad5e62c94fec SHA512 b8e5d8ec81ce3969b01bcaa241c50bce6fd6c4aac1ad2b84f2cac6156295b0e847f2030c2d9ad8c27c597c214af853d94866a609b44bd72a2d2e4e096f99168c WHIRLPOOL bf7f027b22d2f9d087c6ba7a84d4b6979f52317b499f62327a9f2ae43beeb0fd6f7f7ba74a023532dabf4b949216e7452a4f64ed0b99dd4341fa43be80262259
 EBUILD libreoffice-4.0.9999.ebuild 17438 SHA256 3f44d80132bec348db5654f39b92638a282c165bb5f8bdbc03ce15aa1b471ac9 SHA512 46dfa59c3dd4305d0f5bda94aecdd4f21e25785b9eb569e9c60fe42650522ccb8a153ddb6fd39a78d5cae66c8891526654acfb01fbfd7f1653ea6773ecf85fab WHIRLPOOL 3fd60d5dd51add99c3b101bf439a07ba98d3c9c1c8cfbd08016ad3cf218dcacb5cc357ca891d0a3514f7459ea481159b8dd681a303e65e0811392fed75effd8e
-EBUILD libreoffice-9999-r2.ebuild 17429 SHA256 edf43322ead61b2258877e8d64a3e96fbde185399c12053970bf974c319d9e67 SHA512 42dfc2e782182652a294992a27bf0fb5c744eb67bae02707c96c142a7955665bb5bc1b9e7fe6c3d1313aa2327dd72f25ebdb6ebe505dcff7211625ef43f5718e WHIRLPOOL 813437e905a7e2423826325f7b5ab7b7a05a51b886486c10b047a8436cc868bdc072c9a35e29b2cd56b7b346be842e4a4cfc3c3e748e2ec3728dd6696d8c1d43
-MISC ChangeLog 84752 SHA256 2c3903c830e95d7351e0d63e69d1ea979e9016d1d7019196c181cef9faf3db96 SHA512 56276a3f24056098b83afd3e7343b8cfd77153b13ade406646adc975335b0322fbd52c84564627c9d63616bfa7a052851fa18918eab13c7a106ff7ac982a0611 WHIRLPOOL c4d276a35e7423a978ca6ed2530b3c8d1ae0b223206cf61f72bf0b84088803595c7366925910632f98a7427f74bd5fec46101b94ab049e9c89d3a85b82050e29
+EBUILD libreoffice-9999-r2.ebuild 17326 SHA256 a9a59f09a0e4b72a685859c077ade6436fccbb9fe9b154981f89b9be143133c3 SHA512 be7b22bc04224b656bce69a8f7d9ad2b7a177737d4da670710a13c5d63a0012167b96ce52743115899a49054dae5efdc1bbb7950b31323af2fb4f6e03a0a1708 WHIRLPOOL 77ea6a9ea5b5d421240f2ca7ca332e02909e1449dec42c56b8ee1cbd17ae548bf576746394487d3c81213cf5a5b025f7cc53c6b6b920f0ff386bed62e07c5e9d
+MISC ChangeLog 84892 SHA256 8aacc8ad25f8fa04089c362671951248fae6842997db03d4027454a1e091e242 SHA512 a72222dcf401f8f2d65cb43762efebe7f613b98e705dcc9ab0056e477bf25e423d814db665baf61d6b304262e419c7950ca0d6e73db51c8907f222749d6c09a1 WHIRLPOOL 6b1d0bc666be4a97acc2d3d58c95be26fe9383c5518f6370d14d09e288bd1d611179fa7faed6ed5c518c458f63ccfce08acda6a30de3c75b47aa928324e96171
 MISC metadata.xml 1176 SHA256 c1690efe4b2a0fa49801e5cbe66637e25ba71fb902115a75d363f6fe7dc444fb SHA512 2889263d6cf5388d402b2c3999d471e2a2e8c852dcd50755d9f6fd7a549e8b70af7afb66d2f58bc8b9f7bedb4d01a05dda6159c5433a5fdce20ba69f49b9d1b1 WHIRLPOOL e4b548267c79bee3de7bdec839c0fd4d2f1166ded0464d65e6103e63ffb8fb9c08c6a9ff0d01ab09c02826ff1b0b0233a55c5d49b701e963d8c732685b3267dd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRh+aqAAoJEOSiRoyO7jvo5GMP/RwWOCVtAY4Y4Xfm+nwB3Tr3
-KLOkNUJVR96IWNtJWKocg7HBREXoeARyUeNRHPZKPn2A3LHPF9Y4pfEYNa8nFWsM
-5lIus7ET46uPAX5fPGcaWjH4BDo9aljXya9dYweiqDxYS9rvbwq0Lx4ZaJOOOHHk
-BK7mFbixW8jEeNSFvo9lrI8JOVAPfbco9gT5+da8ODf/gZB1tVEncKcWbS/DTTDm
-NR7g7OsdtxTHbvKk+JEN0I3OqXru7lyScL1Is3M7dTlP0juwKuspOKykGVkMupl2
-DVq2ra/ccWmyRwpmiZ9q55OUddvVosszlI1+BLAiVyVCjEJ/e3vTFXtl6HimSCHD
-sqR4M4BEgRWF1T99h19RqJ3ptjyM31VSMtk3iTBRA12McwhqZQdeW6527nqA50bO
-CTQM0rcHXC3z4sKn8vJRJAf1ndYJnatXJK4iWrcDmV/REFz8ISXCAqSvYIYTKAS2
-04PAUGiwuv+v4czc5jSzGfGA8z644ZC9s+B5q1cNiyraHicZSveDvUfJ7JBCOlwo
-Tk8iYL6dfep7vch7B8NeSxwxjIW+T0U10uAMFlaEoI8MaryrWBYP0ZYcmBy15VFh
-fa8RkaBej9cf218wrsqy79CTvwRWBM8I948b+4w+DTu66mUEBjQglk87jIxRFSBs
-41rfhQyjIevItVzHyvMM
-=EKYE
+iQIcBAEBCAAGBQJRiploAAoJEOSiRoyO7jvoAZIP/R9bfsj3mz6g7elT6H6wNQ9b
+uyKLOLNhowjb8LUW/fBn+l9NYmImJcbhL9E8MgJ+Oi+2jSXij+Si7dXG5ASU4tn3
+CdgsO3m3De6QPBYd5O6PT04jab6iS+9Lz7bweIBgem/hlgJroZyhWyq6w/7499k4
+Us9jVd33CT8VXLloIyV820teD6EiNJIld6sb8dMo3rStpo3Ceb+nooJBcgcyRImd
+JpbGTyvOn/gn1llCjNyMocHqwHf3ZqcPAWS+n8dkwFTnkTfB+HJuuK4U0SxQXMPb
+CMuRyzz6MLAWSc15YNGlZvu/qRQiwaOhUwgah6m93wmVKs0Y6MqPCVjbTcgcIetQ
+z0WkyaWNEwaoYzELPPfbWr5YWTiAb9olBv6QA2beD5m0Rw1bDXtgIf777W75iN6E
+mDwuLQ1MJAeOTtJDDnTtOdYs4tZBYKgl2PuZ05B+/M279u4hPERMxcgkmWuzryyF
+kzkEnxHAxc0xDfsn0iA9YDb/K1Sm1pl57AQoICnyYqcLeOiQ0mUtV7/eQK8+tlu8
+MbwcC9Rggxrl8pwI1LnpHX3NI8RevAxvcajz79xBWfNfLjG6hAZS4BllNcfYSkD9
+6T7ojpMnxs7tPKaDo6u6L7dZjFZWQmFeueq4PNEt6xwsQrw1LbkYHDg1i1n36sAz
+oe2pKg6ER59pg/PBLmG4
+=H4hV
 -----END PGP SIGNATURE-----
