@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/vim/ChangeLog,v 1.421 2013/05/08 08:46:15 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/vim/ChangeLog,v 1.422 2013/05/08 16:23:23 jer Exp $
+
+  08 May 2013; Jeroen Roovers <jer@gentoo.org> vim-7.3.762.ebuild:
+  Stable for HPPA (bug #469010).
 
 *vim-7.3.931 (08 May 2013)
 
