@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.387 2013/05/08 08:49:11 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/gvim/ChangeLog,v 1.388 2013/05/08 16:23:10 jer Exp $
+
+  08 May 2013; Jeroen Roovers <jer@gentoo.org> gvim-7.3.762.ebuild:
+  Stable for HPPA (bug #469010).
 
 *gvim-7.3.931 (08 May 2013)
 
